# file-dedup-tool

./: README.md  dedup.py  pyproject.toml
dedup/: render.py  scan.py  style.css  xhtml5builder.py  zip_file_tree.py
src/dedup/: render.py  scan.py  tar_file_tree.py  xhtml5builder.py  zip_file_tree.py
src/dedup/resources/: main.js  style.css
tests/: test_zip.py
