[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-dedup-tool"
version = "0.1.0"
requires-python = ">=3.11"
authors = [
  {name = "Pascal Schmid"},
]
license = {file = "COPYING"}
readme = "README.md"

[project.urls]
Repository = "https://github.com/passchm/file-dedup-tool.git"

[tool.hatch.build.targets.wheel]
packages = ["src/dedup"]
